--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,9 @@
-#UserOrderList {
-	width: 90%; 
-	border:1px solid #B2B2B2; 
-	margin:10px 10px 10px 0px;
-	padding:5px 10px 5px 10px;
-	list-style:none;
-	background-color:#fff;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-}
-li.lineitem {
-	border:1px solid #B2B2B2;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	background-color:#F1F1F1;
-	color:#000;
-	cursor:move;
-	font-size:13px;
-	margin-top:5px;
-	margin-bottom:5px;
-	padding: 2px 5px 2px 5px;
-	height:1.5em;
-	line-height:1.5em;
-}       
-.sortable-placeholder{ 
-	border:1px dashed #B2B2B2;
-	margin-top:5px;
-	margin-bottom:5px; 
-	padding: 2px 5px 2px 5px;
-	height:1.5em;
-	line-height:1.5em;  
-}
-#userlist{ margin:3px 0px;}
+#UserOrderList{background-color:#fff;float:left;list-style:none outside none;padding:0 0 5px;width:100%;margin:0}
+#UserOrderList li.lineitem{border-bottom:1px solid #ccc;border-top:1px solid #ccc;color:#000;cursor:move;float:left;font-size:13px;height:1.5em;line-height:1.5em;margin-bottom:5px;margin-top:5px;padding:7px 0;text-align:center;width:100%;background:#f9f9f9}
+.usersheading li.lineitem{background:linear-gradient(to top,#ececec,#f9f9f9) repeat scroll 0 0 #f1f1f1;float:left;padding:10px 0;text-align:center;width:100%;font-weight:bold;font-size:13px}
+.userrole{text-transform:capitalize}
+.customusercontainer{border-radius:3px 3px 3px 3px;border-style:solid;border-width:1px;border-color:#dfdfdf;float:left;width:100%;margin:10px 0}
+.usersheading{background-color:#fff;list-style:none outside none;margin:0;width:100%}
+#UserOrderList span,.usersheading li span{width:25%;float:left;min-height:1px;}
+.sortable-placeholder{border:1px dashed #b2b2b2;margin-top:5px;margin-bottom:5px;padding:2px 5px 2px 5px;height:1.5em;line-height:1.5em}
+#userlist{margin:3px 0}
